src/test/examples/invalid/semanticErr/expressions/lenUndefinedArr.wacc
# custom test file
# trying to call len on unknown variable
# (Used to fix null pointer in IdentExprAST)

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  int a = len b
end
